# src/main/kotlin/com/back/koreaTravelGuide/domain/ai/aiChat/dto/DeleteAiChatRequest.kt
@@ -1,0 +1,5 @@
+package com.back.koreaTravelGuide.domain.ai.aiChat.dto
+
+data class DeleteAiChatRequest(
+    val sessionId: Long,
+)
